--- a/admin/src/main/resources/templates/base.html
+++ b/admin/src/main/resources/templates/base.html
@@ -87,7 +87,7 @@
 <script th:src="|${urlPrefix}/bootstrap/js/plugins/blueimp/jquery.blueimp-gallery.min.js|"></script>
 
 <script th:src="|${urlPrefix}/scripts/common.js|"></script>
-<script th:src="|${urlPrefix}/scripts/common-function.js|"></script>
+<script th:src="|${urlPrefix}/scripts/common-function.js?v=1|"></script>
 <script th:inline="javascript">
     var src_perfix="[(${urlPrefix})]/";
 </script>
