--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
                         </ul>
                     </li>
                     <li shiro:hasAllRoles="admin">
-                        <a><i class="fa fa-sitemap"></i> <span class="nav-label">奖励标准</span> <span class="fa arrow"></span></a>
+                        <a><i class="fa fa-sitemap"></i> <span class="nav-label">设置分类与奖励标准</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li><a href="reporttype" target="main">分类列表</a></li>
                             <li><a href="reporttype/new" target="main">创建分类</a></li>
@@ -56,7 +56,7 @@
                         <ul class="nav nav-second-level">
                             <li><a href="prizerecord?type=0" target="main">初始发放记录</a></li>
                             <li><a href="prizerecord?type=1" target="main">追加发放记录</a></li>
-                            <li><a href="globalsetting/edit" target="main">初始奖励发放设置</a></li>
+                            <li><a href="globalsetting/edit" target="main">奖励发放设置</a></li>
                             <li><a href="reporttype/list" target="main">追加奖励发放标准</a></li>
                         </ul>
                     </li>
