--- a/mobile/src/main/resources/templates/day_limit.html
+++ b/mobile/src/main/resources/templates/day_limit.html
@@ -12,7 +12,7 @@
             <div class="weui-msg">
                 <div class="weui-msg__icon-area"><i class="weui-icon-warn weui-icon_msg"></i></div>
                 <div class="weui-msg__text-area">
-                    <h2 class="weui-msg__title">对不起，您今日此种红包领取次数已达3次，不能领取，请明天再试。</h2>
+                    <h2 class="weui-msg__title">对不起，您今日此种红包领取次数已达[[${dayLimit}]]次，不能领取，请明天再试。</h2>
                 </div>
                 <div class="weui-msg__opr-area">
                     <p class="weui-btn-area">
