--- a/admin/src/main/resources/templates/report/list.html
+++ b/admin/src/main/resources/templates/report/list.html
@@ -274,6 +274,7 @@
                                     <br/>
                                     <button class="btn btn-sm btn-primary pull-right m-t-n-xs" id="replyBtn" type="button"><strong>确认</strong></button>
                                 </div>
+                                </div>
                             </form>
                         </div>
 
@@ -296,6 +297,7 @@
                                     <br/>
                                     <button class="btn btn-sm btn-primary pull-right m-t-n-xs" id="remarkBtn" type="button"><strong>确认</strong></button>
                                 </div>
+                            </div>
                         </form>
                     </div>
 
